--- a/001Basics/index.html
+++ b/001Basics/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>自学js的第一天</title>
-    <style type="text/ccs" >
+    <style type="text/css">
         body{
-            background-image: url("picture/1.png");
+            background-image: url("./background/1.png");
             background-size: 100% 100%
+            height:100%
         }
+        html{
+            height:100%
+        }
+    </style>
 </head>
 <body>
-<h1>2022.5.1</h1>>
+<h1>2022.5.1</h1>
 </body>
 </html>
